# vscode-ng-language-service

./: .bazelignore  .bazelrc  .gitignore  .npmrc  .nvmrc  .prettierignore  .travis.yml  BUILD.bazel  CHANGELOG.md  DEVELOPER.md  MODULE.bazel  README.md  WORKSPACE  banner.rollup.config.js  esbuild.js  jasmine.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  test.tsconfig.json  tsconfig.json  tslint.json  version.bzl
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE2Njg3NjQwMg==  npm_translate_lock_LTE4Nzc1MDcwNjU=  npm_translate_lock_LTE5NDc2NjEwNDI=  npm_translate_lock_LTIxMDU2NzY0MDI=
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dev-infra.yml  lock-closed.yml  node.js.yml  scorecard.yml
.ng-dev/: config.mts  config.ts  format.mts  format.ts  github.mts  github.ts  merge.ts  pull-request.mts  pullRequest.ts
client/: BUILD.bazel  README.md  language-configuration.json  package.json  tsconfig.json
client/src/: BUILD.bazel  client.ts  command-ngcc.ts  commands.ts  embedded_support.ts  extension.ts  progress-reporter.ts  protocol.ts  providers.ts
client/src/tests/: BUILD.bazel  embedded_support_spec.ts  tsconfig.json
client/syntaxes/: NG.plist
common/: BUILD.bazel  initialize.ts  notifications.ts  progress.ts  requests.ts  resolver.ts  tsconfig.json
common/tests/: BUILD.bazel  tsconfig.json
integration/: BUILD.bazel  smoke_spec.ts  test_constants.ts  tsconfig.json
integration/apf_project/: package.json
integration/e2e/: BUILD.bazel  completion_spec.ts  definition.test.ts  definition_spec.ts  helper.ts  hover_spec.ts  index.ts  jasmine.ts
integration/lsp/: BUILD.bazel  ivy_spec.ts  jasmine.json  smoke_spec.ts  test_utils.ts  viewengine_spec.ts
integration/pre_apf_project/: BUILD.bazel  package.json  pnpm-lock.yaml
integration/pre_apf_project/app/: app.module.ts
integration/pre_standalone_project/: BUILD.bazel  package.json  pnpm-lock.yaml
integration/project/: BUILD.bazel  package.json  pnpm-lock.yaml  tsconfig.json
integration/project/app/: app.component.ts  app.module.ts  bar.component.ts  foo.component.html  foo.component.ts
integration/project/libs/post/: package.json
integration/project/libs/post/src/: index.ts
integration/project/libs/post/src/lib/: post.component.ts
integration/workspace/: BUILD.bazel  package.json  pnpm-lock.yaml
integration/workspace/projects/demo/src/app/: app.module.ts
override_rename_ts_plugin/: README.md  index.js  package.json
scripts/: build.sh  cleanup.sh  e2e.sh  env.sh  format.sh  install.sh  lint.sh  syntax.js  syntax.sh  test.sh  upgrade.sh
scripts/ci/: build.sh  cleanup.sh  env.sh  install.sh  test.sh
server/: BUILD.bazel  README.md  banner.tsconfig.json  esbuild.mjs  package.json  tsconfig-build.json  tsconfig.json
server/src/: BUILD.bazel  banner.js  banner.ts  cmdline_utils.ts  completion.ts  diagnostic.ts  documents.ts  editorServices.ts  embedded_support.ts  errors.ts  logger.ts  ngcc.ts  project_service.ts  protocol.ts  semantic_tokens.ts  server.ts  server_host.ts  session.ts  text_render.ts  utils.ts  version_provider.ts
server/src/tests/: BUILD.bazel  cmdline_utils_spec.ts  editorServices_spec.ts  embedded_support_spec.ts  ngcc_spec.ts  test_utils.ts  text_render_spec.ts  tsconfig.json  utils_spec.ts  version_provider_spec.ts
server/tests/: editorServices_spec.ts  test_data.ts  test_utils.ts  tsconfig.json
syntaxes/: BUILD.bazel  README.md  expression.json  host-object-literal.json  inline-styles.json  inline-template.json  let-declaration.json  template-blocks.json  template.json  template.ng.json  tsconfig.json
syntaxes/src/: BUILD.bazel  build.ts  expression.ts  host-object-literal.ts  inline-styles.ts  inline-template.ts  template-blocks.ts  template-let-declaration.ts  template-tag.ts  template.ts  types.ts
syntaxes/src/expression/: grammar.ts
syntaxes/src/template/: grammar.ts  index.ts
syntaxes/src/template/repository/: binding-key.ts  event-binding.ts  interpolation.ts  property-binding.ts  template-binding.ts  two-way-binding.ts
syntaxes/test/: BUILD.bazel  cases.json  cases.ts  driver.ts  inline_template.ts  inline_template.ts.snap  tsconfig.json
syntaxes/test/data/: expression.html  expression.html.snap  host-object-literal.ts  host-object-literal.ts.snap  inline-styles.ts  inline-styles.ts.snap  inline-template.ts  inline-template.ts.snap  inline-template.tsx.snap  let-declaration.html.snap  template-blocks.html  template-blocks.html.snap  template-tag.html  template-tag.html.snap  template.html  template.html.snap
syntaxes/test/dummy/: css.tmLanguage-dummy.json  expression.ng.tmLanguage-dummy.json  html.tmLanguage-dummy.json  js.tmLanguage-dummy.json
tests/: README.md  tests.sh
tests/assets/: completion-golden.json  completion-test.json  startup-golden.json  startup-test.json
tests/project/: .travis.yml  package.json  tsconfig.json
tests/tools/: index.ts  package.json  tsconfig.json
tests/tools/adapters/: adapters.d.ts
tests/tools/mock-host/: index.ts
tests/tools/validate-expected/: index.ts
v12_language_service/: BUILD.bazel  package.json
