load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vsce/package_json.bzl", vsce_bin = "bin")

npm_link_all_packages(name = "node_modules")

js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//syntaxes/test:__pkg__"],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"]
)

npm_package(
    name = "npm",
    srcs = [
        "package.json",
        "angular.png",
        "CHANGELOG.md",
        "README.md",
        "//client:index.js",
        "//server:npm_files",
        "//syntaxes:npm_files",
        "//v12_language_service:npm_files",
        # Transitive closure of npm deps needed for vsce; this set was determined manually by
        # running `bazel build //:vsix` and burning down missing packages. We do this so that we
        # don't have to run an additional `npm install` action to create a node_modules within the
        # //:npm npm_package where the vsce build takes place.
        ":node_modules/@angular/language-service",
        ":node_modules/balanced-match",
        ":node_modules/brace-expansion",
        ":node_modules/concat-map",
        ":node_modules/lru-cache",
        ":node_modules/minimatch",
        ":node_modules/semver",
        ":node_modules/typescript",
        ":node_modules/vscode-jsonrpc",
        ":node_modules/vscode-languageclient",
        ":node_modules/vscode-languageserver-protocol",
        ":node_modules/vscode-languageserver-types",
        ":node_modules/vscode-languageserver",
        ":node_modules/vscode-uri",
        ":node_modules/yallist",
    ],
    include_srcs_packages = [
        "**",
    ],
    exclude_srcs_patterns = [
        "*.map",
        "**/*.map",
    ],
    replace_prefixes = {
        "client/": "",
        "syntaxes/src/": "syntaxes/",
    },
    visibility = ["//integration:__subpackages__"],
)

vsce_bin.vsce(
    name = "vsix",
    srcs = [
        ":npm",
    ],
    outs = ["ng-template.vsix"],
    chdir = "npm",
    args = [
        "package",
        "-o",
        "../ng-template.vsix"
    ],
)
