load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig",
        "//server:tsconfig",
    ],
    visibility = ["//integration:__subpackages__"]
)

ts_project(
    name = "integration",
    # NB: there is an import cycle between integration/lsp/*.ts and integration/test_constants.ts so
    # they cannot be broken up into separate ts_project targets
    srcs = glob([
      "*.ts",
    ]) + ["//integration/lsp:srcs"],
    declaration = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
        "//:node_modules/vscode-jsonrpc",
        "//:node_modules/vscode-languageserver-protocol",
        "//:node_modules/vscode-uri",
        "//common",
    ],
    visibility = [
        "//integration:__subpackages__",
    ],
)
