load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "npm_files",
    srcs = [
        "package.json",
        "yarn.lock",
        # There are needed for backward compat with Angular v12.
        # See https://github.com/angular/vscode-ng-language-service/issues/1821.
        ":node_modules/@angular/language-service",
        ":node_modules/@angular/language-server",
    ],
    visibility = ["//:__pkg__"],
)
