load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "e2e",
    srcs = glob(["*.ts"]),
    declaration = True,
    source_map = True,
    tsconfig = "//integration:tsconfig",
    deps = [
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
        "//:node_modules/@types/vscode",
        "//:node_modules/vscode-test",
        "//integration",
    ],
    visibility = [
        "//integration:__subpackages__",
    ],
)

js_test(
    name = "test",
    data = [
        ":e2e",
        "//:npm",
        "//integration",
        "//integration/project",
        "//server:index",
        # Depend on //:node_modules/jasmine as a temporary work-around for jasmine escaping its
        # runfiles likely due to esm import issue in rules_js https://github.com/aspect-build/rules_js/issues/362
        "//:node_modules/jasmine",
    ],
    entry_point = ":index.js",
    # This test downloads vscode & installs it which is not allowed in the sandbox
    # due to file system protection. It is tagged local so it runs outside of
    # the sandbox. It would need some redesign to allow for sandbox execution.
    # Tagged manual so that `bazel test //...` doesn't run it automatically.
    tags = ["e2e", "local", "manual"],
)
