load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")

jasmine_test(
    name = "test",
    args = ["*_spec.js"],
    chdir = package_name(),
    data = [
        "//integration",
        "//integration/pre_standalone_project",
        "//integration/pre_standalone_project:node_modules/@angular/common",
        "//integration/pre_standalone_project:node_modules/@angular/core",
        "//integration/project",
        "//integration/project:node_modules/@angular/common",
        "//integration/project:node_modules/@angular/core",
        "//server:index",
    ],
    node_modules = "//:node_modules",
    shard_count = 2,
    tags = [
        "e2e",
        "no-sandbox",
    ],
)

copy_to_bin(
    name = "srcs",
    srcs = glob(["*.ts"]),
    # NB: there is an import cycle between integration/lsp/*.ts and integration/test_constants.ts so
    # they cannot be broken up into separate ts_project targets
    visibility = ["//integration:__subpackages__"],
)
