load("@npm_integration_pre_standalone_project//:defs.bzl", "npm_link_all_packages")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

npm_link_all_packages(name = "node_modules")

copy_to_bin(
    name = "pre_standalone_project",
    srcs = glob(["**"]),
    visibility = [
        "//integration/lsp:__pkg__",
    ],
)
