load("@npm_integration_workspace//:defs.bzl", "npm_link_all_packages")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

npm_link_all_packages(name = "node_modules")

copy_to_bin(
    name = "workspace",
    srcs = glob(["**"]),
    visibility = [
        "//server/src/tests:__pkg__",
    ],
)
