load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "src",
    srcs = glob(["*.ts"]),
    composite = True,
    declaration = True,
    source_map = True,
    supports_workers = False,
    tsconfig = "//server:tsconfig",
    deps = [
        "//:node_modules/@angular/language-service",
        "//:node_modules/@types/node",
        "//:node_modules/typescript",
        "//:node_modules/vscode-html-languageservice",
        "//:node_modules/vscode-languageserver",
        "//:node_modules/vscode-languageserver-textdocument",
        "//:node_modules/vscode-uri",
        "//common",
    ],
    visibility = [
        "//server:__subpackages__",
    ],
)
