load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "src",
    srcs = glob(["*.ts"]),
    declaration = True,
    source_map = True,
    supports_workers = False,
    tsconfig = "//syntaxes:tsconfig",
    deps = [
        "//:node_modules/@types/node",
    ],
)

js_binary(
    name = "build",
    entry_point = ":build.js",
    data = [":src"],
    visibility = ["//syntaxes:__pkg__"],
)
