load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "src",
    srcs = glob(["*.ts"]),
    declaration = True,
    source_map = True,
    tsconfig = "//syntaxes:tsconfig",
    deps = [
        "//:node_modules/@types/node",
    ],
)

js_binary(
    name = "build",
    data = [":src"],
    entry_point = ":build.js",
    visibility = ["//syntaxes:__pkg__"],
)
