load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//syntaxes:__subpackages__"],
    deps = ["//:tsconfig"],
)

ts_project(
    name = "tests",
    srcs = glob(["*.ts"]),
    declaration = True,
    resolve_json_module = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
    ],
)

filegroup(
    name = "dummy",
    srcs = glob(["dummy/**"]),
)

filegroup(
    name = "data",
    srcs = glob(["data/**"]),
)

jasmine_test(
    name = "test",
    args = ["syntaxes/test/driver.js"],
    data = [
        ":data",
        ":dummy",
        ":tests",
        "//:node_modules/vscode-tmgrammar-test",
        "//:package_json",
        "//syntaxes:json",
    ],
    node_modules = "//:node_modules",
    tags = ["unit_test"],
)
