load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig",
        "//client:tsconfig",
    ],
)

ts_project(
    name = "tests",
    srcs = glob(["*.ts"]),
    declaration = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/vscode",
        "//:node_modules/vscode-languageserver-textdocument",
        "//client/src",
    ],
)

jasmine_test(
    name = "test",
    args = ["*_spec.js"],
    chdir = package_name(),
    data = [":tests"],
    tags = ["unit_test"],
)
