load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig",
        "//client:tsconfig",
    ],
)

ts_project(
    name = "tests",
    srcs = glob(["*.ts"]),
    declaration = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = [
        "//client/src",
        "//:node_modules/@types/vscode",
        "//:node_modules/@types/jasmine",
        "//:node_modules/vscode-languageserver-textdocument",
    ],
)

jasmine_test(
    name = "test",
    data = [":tests"],
    args = ["*_spec.js"],
    chdir = package_name(),
    tags = ["unit_test"],
)
